tests/resources/invalid/type/class/access_private_function.mamba
class MyClass
    def private my_function() -> Int => 10


def my_class <- MyClass()
print my_class.my_function()
